--- a/.github/workflows/main_clintbackend.yml
+++ b/.github/workflows/main_clintbackend.yml
@@ -26,6 +26,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
+          npx prisma generate
           npm run build --if-present
           npm run test --if-present
 
@@ -52,4 +53,5 @@ jobs:
           app-name: 'clintbackend'
           slot-name: 'Production'
           package: .
+
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CE0450B7D8F64498951FD3FD35562FDF }}
